--- a/app/views/layouts/explore.html.haml
+++ b/app/views/layouts/explore.html.haml
@@ -12,9 +12,9 @@
       .content
         .explore-title
           %h3
-            Explore GitLab
+            Explore ibiart Git
           %p.lead
-            Discover projects and groups. Share your projects with others
+            Discover public projects and groups. Sign in to find more
 
 
         %ul.nav.nav-tabs
