--- a/app/views/layouts/_head.html.haml
+++ b/app/views/layouts/_head.html.haml
@@ -11,7 +11,7 @@
 
   %title
     = "#{title} | " if defined?(title)
-    GitLab
+    IBA Git
   = favicon_link_tag 'favicon.ico'
   = stylesheet_link_tag    "application", :media => "all"
   = stylesheet_link_tag    "print", :media => "print"
